Bug 76776 - Other: LibreOffice Draw crashes after paste a table from Writer
Summary: Other: LibreOffice Draw crashes after paste a table from Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.1.4.2 release
Hardware: Other Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.5.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2014-03-29 14:41 UTC by Romulo
Modified: 2014-12-10 13:17 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Document with the table (17.26 KB, application/vnd.oasis.opendocument.text)
2014-03-29 14:41 UTC, Romulo
Details
console logs + bt with symbols (16.54 KB, text/plain)
2014-03-29 18:43 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Romulo 2014-03-29 14:41:20 UTC
Created attachment 96587 [details]
Document with the table

Problem description: LibreOffice Draw crashes after paste a table from Writer

Steps to reproduce:
1. Open ficha.odt in Writer
2. Press CTRL+A
3. Press CTRL+C
4. Open Draw
5. Press CTRL+V

Current behavior: LibreOffice crashes and closes both the source and destination document.

Expected behavior: The table should copy into the new document or display an error.

More information:
Linux HP-Probook1 3.2.0-4-amd64 #1 SMP Debian 3.2.54-2 x86_64 GNU/Linux
Operating System: Debian
Version: 4.1.4.2 release
Comment 1 Julien Nabet 2014-03-29 18:43:13 UTC
Created attachment 96596 [details]
console logs + bt with symbols

On pc Debian x86-64 with master sources updated yesterday, I could reproduce the crash.
I attached console logs + bt
Comment 2 Commit Notification 2014-12-10 13:15:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e77c573811dd9d685f2e7e936edc62963739800f

fdo#76776 crashes after paste a table from Writer

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.