fdo#76776 crashes after paste a table from Writer

Change-Id: If859352a7d8d409e5c3c651e0ffea0b3687007db